--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,11 +30,13 @@
     margin-right: 0;
 }
 
-#count-tracking li.ultima-atualizacao{
+#count-tracking li.last-updated{
     margin-right: 0;
     margin-top: -5px;
     display: block;
-    font-size: 10px;
+    font-size: 14px;
+    font-weight: 600;
+    padding-top: 10px;
 }
 
 #count-tracking li span{
@@ -44,6 +46,9 @@
     color: #FFF;
 }
 
+.number {
+    font-weight: 800;
+}
 .mg-head-detail{
     display: none;
 }
